--- a/flexbox.css
+++ b/flexbox.css
@@ -4,40 +4,82 @@
     height: 300px;
 }
 #green{
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 100px;
     background-color: greenyellow;
 }
 
 #yellow{
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 100px;
     background-color:darkgoldenrod;
 }
 
 #purple{
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 100px;
     background-color: blueviolet;
 }
 /**2# feladat**/
 #green{
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 100px;
     background-color: greenyellow;
 }
 
 #yellow{
     width: 200%;
-    height: 100%;
+    height: 100px;
     background-color:darkgoldenrod;
 }
 
 #purple{
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 100px;
     background-color: blueviolet;
 }
 /**3# feladat**/
+#green{
+    width: 300px;
+    height: 100px;
+    background-color: greenyellow;
+    order: 1;
+}
 
+#yellow{
+    width: 200%;
+    height: 100px;
+    background-color:darkgoldenrod;
+}
+
+#purple{
+    width: 300px;
+    height: 100px;
+    background-color: blueviolet;
+    order: -1;
+}
 /**4# feladat**/
+#main{
+    width: 100%;
+    height: 300px;
+    flex-direction: column;
+}
+#green{
+    width: 300px;
+    height: 100px;
+    background-color: greenyellow;
+    order: -1;
+}
+
+#yellow{
+    width: 600px;
+    height: 100px;
+    background-color:darkgoldenrod;
+    order: 1;
+}
+
+#purple{
+    width: 300px;
+    height: 100px;
+    background-color: blueviolet;
+}
